# libgamearchive

./: .gitignore  .travis.yml  BUGS  Makefile.am  README  README.md  TODO  appveyor.yml  configure.ac  libgamearchive-0.1.pc.in  libgamearchive.pc.in
doc/: Makefile.am  gamearch.1  gamearch.xml  gamecomp.1  gamecomp.xml  libgamearchive.doxygen
doxygen/: api.doxygen  full.doxygen
examples/: Makefile.am  common-attributes.hpp  gamearch.cpp  gamecomp.cpp  hello.cpp
include/camoto/: Makefile.am  gamearchive.hpp  types.hpp
include/camoto/gamearchive/: archive-fat.hpp  archive.hpp  archivetype.hpp  filtertype.hpp  fixedarchive.hpp  manager.hpp  stream_archfile.hpp  util.hpp
src/: Makefile.am  archive-fat.cpp  archive.cpp  archivetype.cpp  byteorder.h  cipher-rff-blood.cpp  cipher-rff-blood.hpp  debug.hpp  fatarchive.cpp  fatarchive.hpp  filter-bash-rle.cpp  filter-bash-rle.hpp  filter-bash.cpp  filter-bash.hpp  filter-bitswap.cpp  filter-bitswap.hpp  filter-ddave-rle.cpp  filter-ddave-rle.hpp  filter-decomp-size.cpp  filter-decomp-size.hpp  filter-epfs.cpp  filter-epfs.hpp  filter-glb-raptor.cpp  filter-glb-raptor.hpp  filter-got-lzss.cpp  filter-got-lzss.hpp  filter-prehistorik.cpp  filter-prehistorik.hpp  filter-skyroads.cpp  filter-skyroads.hpp  filter-stargunner.cpp  filter-stargunner.hpp  filter-stellar7.cpp  filter-stellar7.hpp  filter-xor-blood.cpp  filter-xor-blood.hpp  filter-xor-sagent.cpp  filter-xor-sagent.hpp  filter-xor.cpp  filter-xor.hpp  (+90 more)
tests/: Makefile.am  test-archive.cpp  test-archive.hpp  test-archive_new.hpp  test-byteorder.cpp  test-filter-bash-rle.cpp  test-filter-bitswap.cpp  test-filter-ddave-rle.cpp  test-filter-decomp-size.cpp  test-filter-glb-raptor.cpp  test-filter-got-lzss.cpp  test-filter-prehistorik.cpp  test-filter-sam.cpp  test-filter-xor-blood.cpp  test-filter-xor.cpp  test-filter-zone66.cpp  test-filter.cpp  test-filter.hpp  test-fmt-bnk-harry.cpp  test-fmt-bpa-drally.cpp  test-fmt-cur-prehistorik.cpp  test-fmt-dat-bash-compressed.cpp  test-fmt-dat-bash.cpp  test-fmt-dat-got.cpp  test-fmt-dat-highway.cpp  test-fmt-dat-hocus.cpp  test-fmt-dat-hugo.cpp  test-fmt-dat-lostvikings.cpp  test-fmt-dat-mystic.cpp  test-fmt-dat-riptide.cpp  test-fmt-dat-sango.cpp  test-fmt-dat-wacky.cpp  test-fmt-dat-zool.cpp  test-fmt-dlt-stargunner.cpp  test-fmt-epf-lionking.cpp  test-fmt-gd-doofus.cpp  test-fmt-glb-galactix.cpp  test-fmt-glb-raptor.cpp  test-fmt-grp-duke3d.cpp  test-fmt-gwx-homebrew.cpp  (+20 more)
win32/: libgamearchive.autopkg.template  libgamearchive.sln
win32/gamearch/: gamearch.vcxproj  packages.config
win32/gamecomp/: gamecomp.vcxproj  packages.config
win32/libgamearchive/: libgamearchive.vcxproj  packages.config
win32/libgamearchive-tests/: libgamearchive-tests.vcxproj  packages.config
