lib_LTLIBRARIES = libgamearchive.la

libgamearchive_la_SOURCES  = main.cpp
libgamearchive_la_SOURCES += archive.cpp
libgamearchive_la_SOURCES += archive-fat.cpp
libgamearchive_la_SOURCES += filter-bash-rle.cpp
libgamearchive_la_SOURCES += filter-bash.cpp
libgamearchive_la_SOURCES += filter-bitswap.cpp
libgamearchive_la_SOURCES += filter-ddave-rle.cpp
libgamearchive_la_SOURCES += filter-epfs.cpp
libgamearchive_la_SOURCES += filter-glb-raptor.cpp
libgamearchive_la_SOURCES += filter-got-lzss.cpp
libgamearchive_la_SOURCES += filter-prehistorik.cpp
libgamearchive_la_SOURCES += filter-skyroads.cpp
libgamearchive_la_SOURCES += filter-stargunner.cpp
libgamearchive_la_SOURCES += filter-stellar7.cpp
libgamearchive_la_SOURCES += filter-xor-blood.cpp
libgamearchive_la_SOURCES += filter-xor-sagent.cpp
libgamearchive_la_SOURCES += filter-xor.cpp
libgamearchive_la_SOURCES += filter-zone66.cpp
libgamearchive_la_SOURCES += fixedarchive.cpp
libgamearchive_la_SOURCES += fmt-bnk-harry.cpp
libgamearchive_la_SOURCES += fmt-cur-prehistorik.cpp
libgamearchive_la_SOURCES += fmt-da-levels.cpp
libgamearchive_la_SOURCES += fmt-dat-bash.cpp
libgamearchive_la_SOURCES += fmt-dat-got.cpp
libgamearchive_la_SOURCES += fmt-dat-highway.cpp
libgamearchive_la_SOURCES += fmt-dat-hocus.cpp
libgamearchive_la_SOURCES += fmt-dat-hugo.cpp
libgamearchive_la_SOURCES += fmt-dat-lostvikings.cpp
libgamearchive_la_SOURCES += fmt-dat-mystic.cpp
libgamearchive_la_SOURCES += fmt-dat-sango.cpp
libgamearchive_la_SOURCES += fmt-dat-wacky.cpp
libgamearchive_la_SOURCES += fmt-dlt-stargunner.cpp
libgamearchive_la_SOURCES += fmt-epf-lionking.cpp
libgamearchive_la_SOURCES += fmt-exe-ccaves.cpp
libgamearchive_la_SOURCES += fmt-exe-ddave.cpp
libgamearchive_la_SOURCES += fmt-gd-doofus.cpp
libgamearchive_la_SOURCES += fmt-glb-raptor.cpp
libgamearchive_la_SOURCES += fmt-grp-duke3d.cpp
libgamearchive_la_SOURCES += fmt-hog-descent.cpp
libgamearchive_la_SOURCES += fmt-lbr-vinyl.cpp
libgamearchive_la_SOURCES += fmt-lib-mythos.cpp
libgamearchive_la_SOURCES += fmt-mni-czone.cpp
libgamearchive_la_SOURCES += fmt-pcxlib.cpp
libgamearchive_la_SOURCES += fmt-pod-tv.cpp
libgamearchive_la_SOURCES += fmt-res-stellar7.cpp
libgamearchive_la_SOURCES += fmt-resource-tim-fat.cpp
libgamearchive_la_SOURCES += fmt-resource-tim.cpp
libgamearchive_la_SOURCES += fmt-rff-blood.cpp
libgamearchive_la_SOURCES += fmt-roads-skyroads.cpp
libgamearchive_la_SOURCES += fmt-vol-cosmo.cpp
libgamearchive_la_SOURCES += fmt-wad-doom.cpp
libgamearchive_la_SOURCES += stream_archfile.cpp
libgamearchive_la_SOURCES += util.cpp

EXTRA_libgamearchive_la_SOURCES  = filter-bash.hpp
EXTRA_libgamearchive_la_SOURCES += filter-bash-rle.hpp
EXTRA_libgamearchive_la_SOURCES += filter-bitswap.hpp
EXTRA_libgamearchive_la_SOURCES += filter-ddave-rle.hpp
EXTRA_libgamearchive_la_SOURCES += filter-epfs.hpp
EXTRA_libgamearchive_la_SOURCES += filter-glb-raptor.hpp
EXTRA_libgamearchive_la_SOURCES += filter-got-lzss.hpp
EXTRA_libgamearchive_la_SOURCES += filter-prehistorik.hpp
EXTRA_libgamearchive_la_SOURCES += filter-skyroads.hpp
EXTRA_libgamearchive_la_SOURCES += filter-stargunner.hpp
EXTRA_libgamearchive_la_SOURCES += filter-stellar7.hpp
EXTRA_libgamearchive_la_SOURCES += filter-xor-blood.hpp
EXTRA_libgamearchive_la_SOURCES += filter-xor-sagent.hpp
EXTRA_libgamearchive_la_SOURCES += filter-xor.hpp
EXTRA_libgamearchive_la_SOURCES += filter-zone66.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-bnk-harry.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-cur-prehistorik.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-da-levels.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-bash.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-got.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-highway.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-hocus.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-hugo.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-lostvikings.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-mystic.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-sango.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dat-wacky.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-dlt-stargunner.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-epf-lionking.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-exe-ccaves.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-exe-ddave.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-gd-doofus.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-glb-raptor.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-grp-duke3d.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-hog-descent.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-lbr-vinyl.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-lib-mythos.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-mni-czone.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-pcxlib.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-pod-tv.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-res-stellar7.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-resource-tim-fat.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-resource-tim.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-rff-blood.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-roads-skyroads.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-vol-cosmo.hpp
EXTRA_libgamearchive_la_SOURCES += fmt-wad-doom.hpp
EXTRA_libgamearchive_la_SOURCES += stream_archfile.hpp

WARNINGS = -Wall -Wextra -Wno-unused-parameter

AM_CPPFLAGS  = -I $(top_srcdir)/include
AM_CPPFLAGS += $(BOOST_CPPFLAGS)
AM_CPPFLAGS += $(libgamecommon_CPPFLAGS)
AM_CPPFLAGS += $(WARNINGS)

AM_CXXFLAGS  = $(DEBUG_CXXFLAGS)
AM_CXXFLAGS += $(libgamecommon_CFLAGS)

AM_LDFLAGS = $(BOOST_LDFLAGS)

libgamearchive_la_LDFLAGS = $(AM_LDFLAGS)
libgamearchive_la_LDFLAGS += -version-info 2:0:0

libgamearchive_la_LIBADD  = $(BOOST_FILESYSTEM_LIB)
libgamearchive_la_LIBADD += $(libgamecommon_LIBS)
