check_PROGRAMS = tests

tests_SOURCES  = tests.cpp
tests_SOURCES += test-archive.cpp
tests_SOURCES += test-filter.cpp
tests_SOURCES += test-filter-bash-rle.cpp
tests_SOURCES += test-filter-bitswap.cpp
tests_SOURCES += test-filter-ddave-rle.cpp
tests_SOURCES += test-filter-glb-raptor.cpp
tests_SOURCES += test-filter-got-lzss.cpp
tests_SOURCES += test-filter-prehistorik.cpp
tests_SOURCES += test-filter-sam.cpp
tests_SOURCES += test-filter-xor-blood.cpp
tests_SOURCES += test-filter-xor.cpp
tests_SOURCES += test-filter-zone66.cpp
tests_SOURCES += test-fmt-bnk-harry.cpp
tests_SOURCES += test-fmt-bpa-drally.cpp
tests_SOURCES += test-fmt-cur-prehistorik.cpp
tests_SOURCES += test-fmt-dat-bash-compressed.cpp
tests_SOURCES += test-fmt-dat-bash.cpp
tests_SOURCES += test-fmt-dat-got.cpp
tests_SOURCES += test-fmt-dat-highway.cpp
tests_SOURCES += test-fmt-dat-hocus.cpp
tests_SOURCES += test-fmt-dat-hugo.cpp
tests_SOURCES += test-fmt-dat-lostvikings.cpp
tests_SOURCES += test-fmt-dat-mystic.cpp
tests_SOURCES += test-fmt-dat-sango.cpp
tests_SOURCES += test-fmt-dat-wacky.cpp
tests_SOURCES += test-fmt-dlt-stargunner.cpp
tests_SOURCES += test-fmt-epf-lionking.cpp
tests_SOURCES += test-fmt-gd-doofus.cpp
tests_SOURCES += test-fmt-glb-raptor.cpp
tests_SOURCES += test-fmt-grp-duke3d.cpp
tests_SOURCES += test-fmt-hog-descent.cpp
tests_SOURCES += test-fmt-lbr-vinyl.cpp
tests_SOURCES += test-fmt-lib-mythos.cpp
tests_SOURCES += test-fmt-pcxlib.cpp
tests_SOURCES += test-fmt-pod-tv.cpp
tests_SOURCES += test-fmt-res-stellar7.cpp
tests_SOURCES += test-fmt-resource-tim.cpp
tests_SOURCES += test-fmt-resource-tim-fat.cpp
tests_SOURCES += test-fmt-rff-blood.cpp
tests_SOURCES += test-fmt-rff-blood_encrypted.cpp
tests_SOURCES += test-fmt-roads-skyroads.cpp
tests_SOURCES += test-fmt-vol-cosmo.cpp
tests_SOURCES += test-fmt-wad-doom.cpp

EXTRA_tests_SOURCES = tests.hpp
EXTRA_tests_SOURCES += test-archive.hpp
EXTRA_tests_SOURCES += test-filter.hpp

TESTS = tests

AM_CPPFLAGS  = -I $(top_srcdir)/include
AM_CPPFLAGS += $(BOOST_CPPFLAGS)
AM_CPPFLAGS += $(libgamecommon_CFLAGS)

AM_LDFLAGS  = $(top_builddir)/src/libgamearchive.la
AM_LDFLAGS += $(BOOST_LDFLAGS)
AM_LDFLAGS += $(BOOST_UNIT_TEST_FRAMEWORK_LIB)
AM_LDFLAGS += $(libgamecommon_LIBS)
