library_includedir = $(includedir)/@camoto_release@/camoto/

nobase_library_include_HEADERS  = gamearchive.hpp
nobase_library_include_HEADERS += gamearchive/archive.hpp
nobase_library_include_HEADERS += gamearchive/archive-fat.hpp
nobase_library_include_HEADERS += gamearchive/archivetype.hpp
nobase_library_include_HEADERS += gamearchive/filtertype.hpp
nobase_library_include_HEADERS += gamearchive/fixedarchive.hpp
nobase_library_include_HEADERS += gamearchive/manager.hpp
nobase_library_include_HEADERS += gamearchive/util.hpp
